[package]
name = "iso8583"
version = "1.0.0"
authors = ["Rohit Joshi <rohit.joshi@rohit.c.joshi.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Library to Parse ISO-8583 messages"
homepage = "https://github.com/rohitjoshi/iso8583"
repository = "https://github.com/rohitjoshi/iso8583"
documentation = "https://github.com/rohitjoshi/iso8583/blob/master/README.md"
keywords = ["iso8583", "encoding", "decoding", "protocol"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
travis-ci = { repository = "rohitjoshi/iso8583", branch = "master" }
codecov = { repository = "rohitjoshi/iso8583", branch = "master", service = "github" }

[dependencies]
log = "0.3.8"
bit-array="0.4.4"
typenum= "1.9.0"
serde = "1.0"
serde_derive = "1.0"
