[package]
name = "iso8583"
version = "0.5.0"
edition = "2021"
rust-version = "1.66.1"
license = "MIT"
description = "Parse ISO8583 messages chained within files with or without RDW"
homepage = "https://github.com/cloudwalk/iso8583-for-files"
repository = "https://github.com/cloudwalk/iso8583-for-files"
documentation = "https://github.com/cloudwalk/iso8583-for-files/blob/master/README.md"
keywords = ["iso8583", "encoding", "decoding", "protocol"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md","LICENSE-MIT"]

[badges]
travis-ci = { repository = "cloudwalk/iso8583-for-files", branch = "master" }
codecov = { repository = "cloudwalk/iso8583-for-files", branch = "master", service = "github" }

[dependencies]
log = "0.3.8"
bit-array="0.4.4"
typenum= "1.9.0"
serde = "1.0"
serde_derive = "1.0"
eyre = { version = "0.6" }
strum = "0.24"
strum_macros = "0.24"
